Thu Aug 29 14:42:05 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/parsehelp.c: Fix corruption of available file, caused by use of
    memory that was previously freed.

Thu Aug 29 14:31:22 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/parse.c: Check for eof before we getc(), not after.

Sat Aug 24 15:36:41 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Previous install-infos(before 1.10) handled
    multiple dir file entries, because they would copy the entire stanza
    unmodified.  The newest version does not do this, as it reformats the
    options, and thereby only takes the first line.  So, we now split all
    the lines from the stanza, and process them all.

Sat Aug 24 14:47:56 CDT 2002 Adam Heath <doogie@debian.org>

  * archtable: Add i386-gnu0.3.
  * main/Makefile.in, utils/Makefile.in: Fix handling of static compiles,
    with regard to zlib.

Sat Aug 24 14:41:45 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/fields.c: Allow spaces between the end of a version, and the
    trailing ')'.

Sat Aug 24 14:16:13 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/archives.c: Fix segfault when --auto-deconfigure is given.  This is
    causes because the deconfigure list is allocated in an obstack, but
    then freed with normal free().

Thu Aug 22 23:37:45 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/database.c, lib/parse.c, lib/parsehelp.c, main/main.c: Fix several
    read pass buffer bugs, and a memleak.

Thu Aug 22 23:25:23 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/nfmalloc.c: Fix read past buffer in lib/nfmalloc.c.

Thu Aug 22 23:16:02 CDT 2002 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: Handle directories better in md5sum.

Thu Aug 22 23:06:39 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/dpkg-scanpackages.pl: Fix extraction of md5sum in
    dpkg-scanpackages.

Thu Aug 22 23:01:53 CDT 2002 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: Fix segfault in md5sum if the file being checked