@@ -60,4 +60,5 @@ void standard_startup(jmp_buf *ejbuf, int argc, const char *const **argv, const 
 void standard_shutdown(void) {
   set_error_display(0,0);
   error_unwind(ehflag_normaltidy);
+  nffreeall();
 }
