@@ -19,6 +19,7 @@ dpkg (1.10.5) unstable; urgency=low
     stanza, and process them all.  Closes: #147492.
   * Fix corruption of available file, caused by use of memory that was
     previously freed.  Closes: #154257.
+  * Fix several minor memleaks.
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
