@@ -1,3 +1,9 @@
+Thu Aug 29 14:51:35 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/dbmodify.c, lib/dump.c, lib/lock.c, lib/startup.c, lib/tarfn.c
+    main/configure.c, main/filesdb.c, main/query.c: Fix several minor
+    memleaks.
+
 Thu Aug 29 14:42:05 CDT 2002 Adam Heath <doogie@debian.org>
 
   * lib/parsehelp.c: Fix corruption of available file, caused by use of
